--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cssnano": "^3.10.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.12.1",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
+    "unminified-webpack-plugin": "^1.4.1",
     "webpack": "^2.7.0"
   },
   "description": ""
